--- a/.github/workflows/ci_productcatalog.yml
+++ b/.github/workflows/ci_productcatalog.yml
@@ -82,7 +82,7 @@ jobs:
         - name: Build, tag, and push image to Amazon ECR
           id: build-image
           env:
-            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+            ECR_REGISTRY: "060795923562.dkr.ecr.ap-south-1.amazonaws.com"
             IMAGE_TAG: ${{github.run_id}}
           run: |
             # docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./src/product-catalog/Dockerfile
