--- a/kubernetes/productcatalog/deploy.yaml
+++ b/kubernetes/productcatalog/deploy.yaml
@@ -31,7 +31,7 @@ spec:
       #serviceAccountName: opentelemetry-demo
       containers:
         - name: productcatalogservice
-          image: /otel-product-catalog:14818448554
+          image: 060795923562.dkr.ecr.ap-south-1.amazonaws.com/otel-product-catalog:14818474222
           imagePullPolicy: IfNotPresent
           ports:
             
